2017-11-16

	* libsylph/codeconv.[ch]: conv_check_file_encoding(): added detection
	  of UTF-16/UTF-16BE/UTF-16LE.
	  src/compose.c: automatically convert attached UTF-16 text file to
	  UTF-8.

2017-11-15

	* src/printing.c: use GTK_UNIT_PIXEL instead of GTK_UNIT_POINTS
	  to avoid text corruption bug.
	  Fixed printing of empty lines.

2017-07-07

	* plugin/test/test.c: made app_exit_handler_id static to prevent conflicts
	  of symbols.

2017-06-28

	* version 3.6.0

2017-06-28

	* manual/ja/sylpheed.sgml: updated.

2017-06-12

	* version 3.6.0beta1

2017-06-12

	* src/printing.c: disable save/load of printing settings on
	  GTK+ <= 2.10.

2017-06-09

	* src/printing.c: save/load printing settings and page setup.

2017-03-22

	* src/about.c
	  src/sylpheed.rc.in: updated copyright year.

2017-02-28

	* manual/ja/sylpheed.sgml: updated.

2017-02-24

	+ libsylph/libsylph-0.def: export procmime_scan_message_stream.

2017-02-20

	* src/prefs_account_dialog.c: fixed sensitivity change of signature
	  settings.

2017-02-20

	* configure.ac: increased the version.

2017-02-17

	* manual/ja/sylpheed.sgml: added 'Other features' section.

2017-02-17

	* libsylph/imap.c: subscribe newly created folders since they are
	  not always subscribed automatically.

2017-02-17

	* src/undo.c: made debug print switchable.

2017-02-16

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2017-02-16

	* src/editgroup.c: modified next selection after move.
	  Added folder icons.

2017-02-15

	* src/editgroup.c: expand the tree when moving email from group to
	  available list.

2017-02-15

	* src/editgroup.c: show available email list with folder tree.

2017-02-10

	* src/editgroup.c: fixed selection after multiple move.

2017-02-10

	* src/editgroup.c: replaced GTKCList with GtkTreeView and also
	  enabled multiple selection.

2017-02-07

	* libsylph/prefs_account.[ch]
	  src/compose.[ch]
	  src/prefs_account_dialog.c