@@ -1,9 +1,14 @@
 2017-11-16
 
+	* src/compose.c: compose_insert_file(): supported insertion of
+	  UTF-16/UTF-16BE/UTF-16LE text.
+
+2017-11-16
+
 	* libsylph/codeconv.[ch]: conv_check_file_encoding(): added detection
 	  of UTF-16/UTF-16BE/UTF-16LE.
-	  src/compose.c: automatically convert attached UTF-16 text file to
-	  UTF-8.
+	* src/compose.c: automatically convert attached UTF-16 text file to
+	  UTF-8 on sending.
 
 2017-11-15
 
